<resources>
    <string name="app_name">Monte Store</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="enter">Enter</string>
    <string name="air_max">Air Max</string>
    <string name="price_20_00">Price: $20.00</string>
    <string name="quantity_5">Quantity: 5</string>
    <string name="return_user">Return User</string>
    <string name="macbookm2">MacBookM2</string>
</resources>