<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Login">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Returning User"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/username1"
        android:layout_below="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/user_name"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:height="48dp"
        android:layout_below="@+id/username1"
        />
    <Button
        android:id="@+id/btnsinin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password1"
        />
    <Button
        android:id="@+id/btnadmin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnsinin1"
        />
</RelativeLayout>
